deployments/k8s/envoy/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-conf
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - name: listener_0
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8080
          per_connection_buffer_limit_bytes: 524288
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: ingress_http
                    access_log:
                      - name: envoy.access_loggers.file
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                          path: /dev/stdout
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: local_service
                          domains:
                            - "*"
                          routes:
                            - match:
                                prefix: /
                                grpc:
                              route:
                                cluster: alva_service
                          cors:
                            allow_origin_string_match:
                              - prefix: "*"
                            allow_methods: GET, PUT, DELETE, POST, OPTIONS
                            allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,grpc-status-details-bin,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization
                            expose_headers: grpc-status-details-bin,grpc-status,grpc-message,authorization
                            max_age: "1728000000"
                    http_filters:
                      - name: envoy.filters.http.grpc_web
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                      - name: envoy.filters.http.cors
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

      clusters:
        - name: alva_service
          type: STRICT_DNS
          connect_timeout: 100s
          lb_policy: round_robin
          load_assignment:
            cluster_name: alva_service
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: broker
                          port_value: 8081
          circuit_breakers:
            thresholds:
              - priority: DEFAULT
                max_connections: 10000000
                max_pending_requests: 10000000
                max_requests: 10000000
              - priority: HIGH
                max_connections: 10000000
                max_pending_requests: 10000000
                max_requests: 10000000
          max_requests_per_connection: 10000000
          per_connection_buffer_limit_bytes: 100000000
          http2_protocol_options: {
            "hpack_table_size": 4294967295,
            "max_concurrent_streams": 2147483647,
            "initial_stream_window_size": 2147483647,
            "max_outbound_frames": 100000,
            "max_outbound_control_frames": 100000,
            "max_consecutive_inbound_frames_with_empty_payload": 10,
          }

    layered_runtime:
      layers:
        - name: static_layer_0
          static_layer:
            envoy:
              resource_limits:
                listener:
                  booksd_listener_name:
                    connection_limit: 1000000
            overload:
              global_downstream_max_connections: 5000000
