deployments/k8s/envoy/envoy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
        - name: envoy
          image: envoy:latest
          imagePullPolicy: Never
          ports:
            - name: https
              containerPort: 10000
          resources:
            requests:
              memory: "2Gi"
              cpu: "2"
            limits:
              memory: "3Gi"
              cpu: "3"
